# robi_biometric_solutions

./: .env  .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_gpu.py  streamlit_app.py
docs/: DEPLOYMENT_GUIDE.md  README_HYBRID_INTEGRATION.md
faiss_app/: .dockerignore  Dockerfile  Dockerfile.optimized  README.md  __init__.py  alternative_vector_db_service.py  build_and_run.bat  build_and_run.sh  config.py  config_optimized.py  docker-compose.faiss.yml  docker-compose.optimized.yml  faiss_service.py  main.py  main_optimized.py  models.py  optimized_faiss_service.py  requirements.txt  requirements_optimized.txt  run_faiss_service.py  test_deployment.py
faiss_app/performance_tests/: run_benchmarks.py
scripts/: bulk_enroll.py
src/: main.py
src/api/: endpoints.py  schemas.py
src/config/: settings.py
src/core/: face_processor.py  faiss_engine.py  gpu_optimizer.py  hybrid_vector_store.py  optimized_face_processor.py  qdrant_client.py  vector_store_client.py
src/utils/: async_optimizer.py  consolidated_utils.py  gpu_config.py  logging_config.py  memory_optimizer.py  performance_monitor.py  timing.py  validators.py
tests/: create_collection.py  test_api_endpoints.py  test_hybrid_integration.py  test_qdrant_connection.py  test_startup.py
